Added tokenizer chain, updates to travis config

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'groovy'
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
@@ -32,6 +33,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     // end::actuator[]
     compile 'org.codehaus.groovy:groovy-all'
+    // guava
+    compile 'com.google.guava:guava:19.0'
+
     testCompile("junit:junit")
 }
 
@@ -43,6 +47,15 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
 
-task stage {
-    dependsOn build
+task stage(type: Copy, dependsOn: [clean, build]) {
+    from jar.archivePath
+    into project.rootDir
+    rename {
+        'app.jar'
+    }
+}
+stage {}.mustRunAfter(clean)
+
+clean << {
+    project.file('app.jar').delete()
 }
