--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: groovy
 jdk:
   - oraclejdk8
-script: ./gradlew test
+install: echo "skip 'gradle assemble' step"
+script: ./gradlew build --continue
 cache:
   directories:
-  - .gradle/*
-  - $HOME/.m2
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
+  - $HOME/.m2/
