Added interactive documentation via swagger

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     // guava
     compile 'com.google.guava:guava:19.0'
 
+    compile 'io.springfox:springfox-swagger2:2.2.2'
+
+    compile 'io.springfox:springfox-swagger-ui:2.2.2'
+
     testCompile("junit:junit")
 }
 
