--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: groovy
 jdk:
-  - oraclejdk8
+  - openjdk8
 install: echo "skip 'gradle assemble' step"
 script: ./gradlew build --continue
 cache:
